--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -75,7 +75,7 @@
     <div class="recent-issues-section">
         <div class="section-header">
             <h3 class="section-title">Latest Submittions</h3>
-            <a href="{{ url_for('my_issues') }}" class="btn btn-outline-primary">
+            <a href="{{ url_for('dashboard') }}" class="btn btn-outline-primary">
                 <i class="fas fa-list me-2"></i>View All Submittions
             </a>
         </div>
