--- a/templates/login.html
+++ b/templates/login.html
@@ -57,7 +57,7 @@
                                         Remember me
                                     </label>
                                 </div>
-                                <a href="#" class="forgot-password">Forgot Password?</a>
+                                <a href="{{ url_for('forgot_password') }}" class="forgot-password">Forgot Password?</a>
                             </div>
                             
                             <button type="submit" class="btn btn-primary btn-lg w-100 login-submit-btn">
