--- a/templates/submit_issue.html
+++ b/templates/submit_issue.html
@@ -42,7 +42,7 @@
                     </div>
                     
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="{{ url_for('student_dashboard') }}" class="btn btn-secondary me-md-2">
+                        <a href="{{ url_for('dashboard') }}" class="btn btn-secondary me-md-2">
                             <i class="fas fa-times me-2"></i>Cancel
                         </a>
                         <button type="submit" class="btn btn-primary">
